--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -26,6 +26,7 @@ allprojects {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
     repositories {
+        mavenLocal()
         jcenter()
         mavenCentral()
     }
