--- a/p3c-pmd/pom.xml
+++ b/p3c-pmd/pom.xml
@@ -121,6 +121,7 @@
             <ruleset>rulesets/java/ali-orm.xml</ruleset>
             <ruleset>rulesets/java/ali-other.xml</ruleset>
             <ruleset>rulesets/java/ali-set.xml</ruleset>
+            <ruleset>rulesets/java/yonyou-rule.xml</ruleset>
           </rulesets>
           <excludes>
             <exclude>**/FixClassTypeResolver.java</exclude>
@@ -170,26 +171,26 @@
           </execution>
         </executions>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.4</version>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <tags>
-            <tag>
-              <name>date</name>
-            </tag>
-          </tags>
-        </configuration>
-      </plugin>
+      <!--<plugin>-->
+        <!--<groupId>org.apache.maven.plugins</groupId>-->
+        <!--<artifactId>maven-javadoc-plugin</artifactId>-->
+        <!--<version>2.10.4</version>-->
+        <!--<executions>-->
+          <!--<execution>-->
+            <!--<id>attach-javadocs</id>-->
+            <!--<goals>-->
+              <!--<goal>jar</goal>-->
+            <!--</goals>-->
+          <!--</execution>-->
+        <!--</executions>-->
+        <!--<configuration>-->
+          <!--<tags>-->
+            <!--<tag>-->
+              <!--<name>date</name>-->
+            <!--</tag>-->
+          <!--</tags>-->
+        <!--</configuration>-->
+      <!--</plugin>-->
       <!-- <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-gpg-plugin</artifactId>
