--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -1,12 +1,14 @@
 buildscript {
     repositories {
+//        maven {
+//            url "https://oss.sonatype.org/content/repositories/snapshots/"
+//        }
+//        maven {
+//            url 'http://dl.bintray.com/jetbrains/intellij-plugin-service'
+//        }
         maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
+            url 'http://maven.aliyun.com/nexus/content/groups/public/'
         }
-        maven {
-            url 'http://dl.bintray.com/jetbrains/intellij-plugin-service'
-        }
-        mavenCentral()
 
     }
     dependencies {
@@ -26,7 +28,7 @@ allprojects {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
     }
     repositories {
-        mavenLocal()
+        maven{ url 'http://maven.aliyun.com/nexus/content/groups/public/'}
         jcenter()
         mavenCentral()
     }
